--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
     <header id="home">
         <div class="header-content">
-            <h2  id="quote">Discover the World Through Shared Experiences</h2>
+            <!-- <h2  id="quote">Discover the World Through Shared Experiences</h2> -->
             <div class="line"></div>
             <h1 >  Unleash Your Wanderlust</h1>
             <a href="#about" class="ctn" onclick='removeall(); $("#quad").css("border", "2px solid whitesmoke"); $("#quad").css("border-radius", "20px");'>Learn more</a>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="c_boxx">
                     <a href="#"><i class="fa fa-map-marker"></i>
-                        Location: Greater Noida,Uttar Pradesh,India
+                        Location: Greater Noida,Uttar Pradesh
                     </a>
                 </div>
             </div>
