One files changed

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
     <header id="home">
         <div class="header-content">
-            <!-- <h2  id="quote">Discover the World Through Shared Experiences</h2> -->
+            <h1>Discover the World Through Shared Experiences</h1>
             <div class="line"></div>
             <h1 >  Unleash Your Wanderlust</h1>
             <a href="#about" class="ctn" onclick='removeall(); $("#quad").css("border", "2px solid whitesmoke"); $("#quad").css("border-radius", "20px");'>Learn more</a>
